# lab-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
3rd/: 3rd.txt
3rd/SDL/: CMakeLists.txt
3rd/assimp/: CMakeLists.txt
3rd/cgltf/: CMakeLists.txt
3rd/glslang/: CMakeLists.txt
3rd/imgui/: CMakeLists.txt
3rd/imgui/backends/: imgui_impl_opengl3.cpp
3rd/imgui/examples/example_sdl_vulkan/: main.cpp
3rd/stb/: CMakeLists.txt
3rd/tinyobjloader/: CMakeLists.txt
assets/meshes/helmet/: damageHelmet.glb
assets/rayman/: scene.json
assets/shaders/: mandelbrot-set.comp  post.frag  skybox.frag  tonemap.frag
assets/shaders/legacy/: animationTexture.vert  background.frag  brdf.vert  hdrSynthesis.frag  ibl_irradiance.frag  ibl_prefilter.frag  ibl_sphere2cube.frag  image-blend.frag  pathTracer.frag  pbr-material.frag  pbrpost.frag  pbrpost.vert  post-effect.frag  postEffect.vert  skinned.vert  skybox.frag  skyboxReflect.frag  ssr.frag  static.vert  surface-normal.frag  test.frag  test.vert  texturemapping.vert  vertex.vert
assets/shaders/rayman/: Denoiser.comp  DisneyBSDF.glsl  Random.glsl  Raytracing.rchit  Raytracing.rgen  Sampling.glsl  Shadow.rmiss  Structs.glsl
labgraphics/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  ImageData.cpp  ImageData.h  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Pass.h  Pass.inl  RasterPass.cpp  RasterPass.h  RayTracePass.cpp  RayTracePass.h  Scene.h  Window.h  labgraphics.h
labgraphics/Base/: App.cpp  App.h  Camera.cpp  ImageData.cpp  ImageData.h
labgraphics/Graphics/VK/: AS.cpp  AS.h  Attachment.cpp  Attachment.h  AttachmentDesc.h  Buffer.cpp  Buffer.h  Buffer.inl  CommandBuffer.cpp  CommandBuffer.h  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorTable.cpp  DescriptorTable.h  Device.cpp  Device.h  Device.inl  Enum.h  Format.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  Image.inl  ImageView.cpp  ImageView.h  IndexBuffer.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  (+21 more)
labgraphics/Math/: DualQuaternion.h  Math.hpp  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Random.cpp  Random.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
labgraphics/Platform/: InputSystem.cpp  InputSystem.h  Timer.cpp  Timer.h  Window.h
samples/: CMakeLists.txt  ImguiScene.cpp  ImguiScene.h  SceneMandelbrotSetGen.cpp  SceneMandelbrotSetGen.h  SceneRayTraceTriangle.cpp  SceneRayTraceTriangle.h  SceneSoftRayTracing.cpp  SceneSoftRayTracing.h  SceneSph.cpp  SceneSph.h  SphScene.cpp  SphScene.h  main.cpp
samples/MandelbrotSetGenerate/: SceneMandelbrotSetGen.cpp  SceneMandelbrotSetGen.h
samples/PathTracer/: CMakeLists.txt  HDRLoader.h  Model.cpp  RaymanScene.cpp  RaymanScene.h  RtxRayTraceScene.h  ShaderCompiler.h  Texture.h
samples/Pbr/: Image.cpp  Mesh.h  PbrScene.cpp  PbrScene.h  Renderer.cpp  Renderer.h
samples/PbrExample/: Mesh.cpp
samples/RayTracingExample/: Camera.h  RtxScene.cpp  RtxScene.h  SBT.cpp  SBT.h  VkUtils.cpp  VkUtils.h
samples/RayTracingExample/assets/: shader.rgen  shaderDatas.glsl
samples/RayTracingTriangle/: SceneRayTraceTriangle.cpp  SceneRayTraceTriangle.h
samples/Rayman/: HDRLoader.cpp  Material.h  Model.h  PostProcessPass.cpp  PostProcessPass.h  RaymanScene.cpp  RaymanScene.h  RtxRayTracePass.cpp  RtxRayTracePass.h  RtxRayTraceScene.cpp  ShaderCompiler.cpp  Texture.cpp
samples/Sph/: SphScene.cpp
samples/assets/meshes/: Ball.glb  TestingModel.glb  Waterflask.glb  cerberus.glb  glass.glb  plane.glb  rhombus.glb  thinwall.glb
samples/assets/meshes/amber/: genshin_impact__amber.glb
samples/assets/rayman/: scene.json
samples/assets/shaders/: equirect2cube.comp  irradiancemap.comp  mandelbrot-set.comp  pbr.frag  pbr.vert  pbr_brdf.comp  skybox.vert  specularmap.comp  sph_density_pressure.comp  sph_force.comp  sph_integrate.comp  sph_particle.frag  sph_particle.vert  tonemap.vert
samples/assets/shaders/SoftRayTracing/: composite.frag  intersections.glsl  materials.glsl  pathtrace.frag  primitives.glsl  utils.glsl
samples/assets/shaders/legacy/: add-sphere.frag  antialiasing.frag  brdf.frag  creating-an-image.frag  diffuse-material.frag  empty-post-effect.frag  gbuffer.frag  gbuffer.vert  hdrSynthesis.vert  ibl.vert  ibl_sphere2cube.vert  light.frag  light.vert  lit.frag  metal-material.frag  multi-pbr-material-with-texture-mapping.frag  multi-pbr-material-with-texture-mapping.vert  multiple-objects.frag  pbr-material.vert  postEffect.frag  ray-tracing-in-one-weekend.frag  skinnedDualQuaternion.vert  skybox.vert  skyboxReflect.vert  ssao-gbuffer.frag  ssao-reconstruction-from-depthss.frag  ssaoblur.frag  ssaoblur.vert  ssr.vert  texturemapping.frag  white.vert
samples/assets/shaders/rayman/: EdgeDetect.comp  HDR.glsl  Math.glsl  Raytracing.rchit  Raytracing.rmiss  Sharpen.comp
samples/pbr-example/: CMakeLists.txt  Image.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  main.cpp
samples/ray-tracing-example/: CMakeLists.txt  Camera.cpp  RtxApp.cpp  RtxApp.h  Scene.cpp  Scene.h  VkUtils.cpp  VkUtils.h  main.cpp
samples/ray-tracing-example/assets/: shader.rchit  shader.rmiss
samples/soft-ray-tracing-example/: CMakeLists.txt  SoftRayTracingScene.cpp  SoftRayTracingScene.h  main.cpp
samples/soft-ray-tracing-example/shaders/: primitives.glsl  quad.vert
samples/taichi/: cv_image_toon.py  requirements.txt  taichi_cv.py  taichi_dem.py  taichi_fractal.py  taichi_fur.py  taichi_mandelbrot_set.py  taichi_pbf2d.py  taichi_ray_tracing_in_one_weekend.py  taichi_sph.py  utils.py
samples/taichi/cloth-simulation/: taichi_closim_cs114.py  taichi_closim_cs114_pbd.py  taichi_clothsim.py  taichi_clothsim2.py  taichi_clothsim3.py  taichi_clothsim4.py  taichi_clothsim5.py  taichi_implict_mass_spring.py
samples/taichi/stable-fluids/: taichi_2d_euler_stable_fluid.py  taichi_2d_eulerian_fluid.py  taichi_euler_fluid_2d.py  taichi_gpu_gems_2d_fluid_sim.py  taichi_gpu_gems_3d_fluid_sim_smoke.py
