cmake_minimum_required(VERSION 3.10)

project(lab-graphics LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(VULKAN_ROOT "$ENV{VULKAN_SDK}" CACHE STRING "")
set(VULKAN_INCLUDE_DIR "${VULKAN_ROOT}/Include")
set(VULKAN_LIB_DIR "${VULKAN_ROOT}/Lib")

message("VULKAN_ROOT=${VULKAN_ROOT}")
message("VULKAN_INCLUDE_DIR=${VULKAN_INCLUDE_DIR}")
message("VULKAN_LIB_DIR=${VULKAN_LIB_DIR}")

if(WIN32)
    add_compile_options(/W4)
    add_compile_options(/wd4819)
endif()

set(DEST_BINARY_DIR ${CMAKE_BINARY_DIR}/Binary)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DEST_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DEST_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DEST_BINARY_DIR})

set(SPIRV_HEADERS_SKIP_INSTALL OFF)
set(BUILD_SHARED_LIBS OFF)
set(SPDLOG_BUILD_SHARED OFF)
set(ASSIMP_WARNINGS_AS_ERRORS OFF)

if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    message(STATUS "current platform: Linux")
    set(CURRENT_PLATFORM PLATFORM_LINUX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
    message(STATUS "current platform: Windows")
    set(CURRENT_PLATFORM PLATFORM_WINDOWS)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
    message(STATUS "current platform: FreeBSD")
    set(CURRENT_PLATFORM PLATFORM_FREEBSD)
else ()
    message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
    set(CURRENT_PLATFORM PLATFORM_OTHER)
endif ()

set(SDL_INC_DIR "${CMAKE_SOURCE_DIR}/3rd/SDL/include")
set(SPDLOG_INC_DIR "${CMAKE_SOURCE_DIR}/3rd/spdlog/include")
set(SPIRV_REFLECT_INC_DIR "${CMAKE_SOURCE_DIR}/3rd/spirv-reflect")
set(SPIRV_HEADERS_INC_DIR "${CMAKE_SOURCE_DIR}/3rd/spirv-headers")
set(LIB_GRAPHICS_INC_DIR "${CMAKE_SOURCE_DIR}/labgraphics")
set(ASSIMP_INC_DIR "${CMAKE_SOURCE_DIR}/3rd/assimp/include")
set(ASSIMP_GENERATE_INC_DIR "${CMAKE_BINARY_DIR}/3rd/assimp/include")
set(CGLTF_INC_DIR "${CMAKE_BINARY_DIR}/3rd/cgltf")
set(STB_INC_DIR "${CMAKE_BINARY_DIR}/3rd/stb")
set(THIRD_PARTY_DIR "${CMAKE_SOURCE_DIR}/3rd")

add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/SDL")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/glad")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/cgltf")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/glslang")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/spdlog")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/stb")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/spirv-headers")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/spirv-reflect")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/assimp")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/tinyobjloader")
add_subdirectory("${CMAKE_SOURCE_DIR}/3rd/imgui")

if(WIN32)
    set_property(TARGET SDL2-static PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET SDL2main PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET uninstall PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET stb PROPERTY FOLDER 3rd)
    set_property(TARGET cgltf PROPERTY FOLDER 3rd)
    set_property(TARGET glad PROPERTY FOLDER 3rd)
    set_property(TARGET spdlog PROPERTY FOLDER 3rd)
    set_property(TARGET glslang PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET MachineIndependent PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET OSDependent PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET GenericCodeGen PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET OGLCompiler PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET glslang-default-resource-limits  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET SPVRemapper  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET SPIRV  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET HLSL  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET spirv-reflect  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET tinyobjloader  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET install-headers  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET assimp  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET UpdateAssimpLibsDebugSymbolsAndDLLs  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET zlibstatic  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET imgui  PROPERTY FOLDER 3rd)
endif()


add_subdirectory(labgraphics)

add_subdirectory(samples)
# add_subdirectory(samples/soft-ray-tracing-example)
add_subdirectory(samples/ray-tracing-example)
add_subdirectory(samples/pbr-example)
# add_subdirectory(samples/comp5822m-example)