cmake_minimum_required(VERSION 3.10)

project(lab-graphics LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(VULKAN_ROOT "$ENV{VULKAN_SDK}" CACHE STRING "")
set(VULKAN_INCLUDE_DIR "${VULKAN_ROOT}/Include")
set(VULKAN_LIB_DIR "${VULKAN_ROOT}/Lib")

message("VULKAN_ROOT=${VULKAN_ROOT}")
message("VULKAN_INCLUDE_DIR=${VULKAN_INCLUDE_DIR}")
message("VULKAN_LIB_DIR=${VULKAN_LIB_DIR}")

set(DEST_BINARY_DIR ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DEST_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DEST_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DEST_BINARY_DIR})

if(WIN32)
    add_compile_options(/W4)
    add_compile_options(/wd4819)
endif()

set(DISABLE_FORCE_DEBUG_POSTFIX ON)
set(CMAKE_DEBUG_POSTFIX "_d") 
set(CMAKE_RELEASE_POSTFIX "")
set(SDL_CMAKE_DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

set(SPIRV_HEADERS_SKIP_INSTALL OFF)
set(BUILD_SHARED_LIBS OFF)
set(SPDLOG_BUILD_SHARED OFF)
set(ASSIMP_WARNINGS_AS_ERRORS OFF)

set(THIRD_PARTY_DIR "${CMAKE_SOURCE_DIR}/3rd")
set(SDL_INC_DIR "${THIRD_PARTY_DIR}/SDL/include")
set(IMGUI_INC_DIR "${THIRD_PARTY_DIR}/imgui")
set(SPDLOG_INC_DIR "${THIRD_PARTY_DIR}/spdlog/include")
set(SPIRV_REFLECT_INC_DIR "${THIRD_PARTY_DIR}/spirv-reflect")
set(SPIRV_HEADERS_INC_DIR "${THIRD_PARTY_DIR}/spirv-headers")
set(LIB_GRAPHICS_INC_DIR "${CMAKE_SOURCE_DIR}/labgraphics")
set(ASSIMP_INC_DIR "${THIRD_PARTY_DIR}/assimp/include")
set(ASSIMP_GENERATE_INC_DIR "${CMAKE_BINARY_DIR}/3rd/assimp/include")
set(CGLTF_INC_DIR "${THIRD_PARTY_DIR}/cgltf")
set(STB_INC_DIR "${THIRD_PARTY_DIR}/stb")
set(GLAD_INC_DIR "${THIRD_PARTY_DIR}/glad")

add_subdirectory("${THIRD_PARTY_DIR}/SDL")
add_subdirectory("${THIRD_PARTY_DIR}/glad")
add_subdirectory("${THIRD_PARTY_DIR}/cgltf")
add_subdirectory("${THIRD_PARTY_DIR}/glslang")
add_subdirectory("${THIRD_PARTY_DIR}/spdlog")
add_subdirectory("${THIRD_PARTY_DIR}/stb")
add_subdirectory("${THIRD_PARTY_DIR}/spirv-headers")
add_subdirectory("${THIRD_PARTY_DIR}/spirv-reflect")
add_subdirectory("${THIRD_PARTY_DIR}/assimp")
add_subdirectory("${THIRD_PARTY_DIR}/tinyobjloader")
add_subdirectory("${THIRD_PARTY_DIR}/imgui")

if(WIN32)
    set_property(TARGET SDL2-static PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET SDL2main PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET uninstall PROPERTY FOLDER 3rd/SDL2)
    set_property(TARGET stb PROPERTY FOLDER 3rd)
    set_property(TARGET cgltf PROPERTY FOLDER 3rd)
    set_property(TARGET glad PROPERTY FOLDER 3rd)
    set_property(TARGET spdlog PROPERTY FOLDER 3rd)
    set_property(TARGET glslang PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET MachineIndependent PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET OSDependent PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET GenericCodeGen PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET OGLCompiler PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET glslang-default-resource-limits  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET SPVRemapper  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET SPIRV  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET HLSL  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET spirv-reflect  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET install-headers  PROPERTY FOLDER 3rd/glslang)
    set_property(TARGET assimp  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET UpdateAssimpLibsDebugSymbolsAndDLLs  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET zlibstatic  PROPERTY FOLDER 3rd/assimp)
    set_property(TARGET imgui  PROPERTY FOLDER 3rd)
    set_property(TARGET tinyobjloader  PROPERTY FOLDER 3rd)
endif()

add_subdirectory(labgraphics)

add_subdirectory(samples)
# add_subdirectory(samples/comp5822m-example)