file(GLOB SRC "*.h" "*.cpp")
file(GLOB SPH_SRC "Sph/*.h" "Sph/*.cpp")
file(GLOB MANDELBROT_SET_GENERATE_SRC "MandelbrotSetGenerate/*.h" "MandelbrotSetGenerate/*.cpp")
file(GLOB RAYMAN_SRC "Rayman/*.h" "Rayman/*.cpp")
file(GLOB RAY_TRACING_TRIANGLE_SRC "RayTracingTriangle/*.h" "RayTracingTriangle/*.cpp")
source_group("src" FILES ${SRC})
source_group("Sph" FILES ${SPH_SRC})
source_group("MandelbrotSetGenerate" FILES ${MANDELBROT_SET_GENERATE_SRC})
source_group("Rayman" FILES ${RAYMAN_SRC})
source_group("RayTracingTriangle" FILES ${RAY_TRACING_TRIANGLE_SRC})
add_executable(sample ${SRC} ${SPH_SRC} ${MANDELBROT_SET_GENERATE_SRC} ${RAYMAN_SRC} ${RAY_TRACING_TRIANGLE_SRC})
target_link_libraries(sample PRIVATE labgraphics)
target_include_directories(sample PRIVATE ${LIB_GRAPHICS_INC_DIR})
target_compile_definitions(sample PRIVATE SHADER_DIR="${CMAKE_SOURCE_DIR}/assets/shaders/")
target_compile_definitions(sample PRIVATE ASSETS_DIR="${CMAKE_SOURCE_DIR}/assets/")
file(COPY ${CMAKE_SOURCE_DIR}/assets/shaders/rayman/ DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
